[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/Slot.gd" type="Script" id=1]
[ext_resource path="res://res/slot_circle.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )
shadow_color = Color( 1, 1, 1, 0.501961 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0.25098 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[node name="Slot" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Flash" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.5
margin_top = -720.0
margin_right = -0.400002
margin_bottom = 720.0
mouse_filter = 2
custom_styles/panel = SubResource( 7 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.501961 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Hack" type="Position2D" parent="."]
position = Vector2( 48, 198 )

[node name="Hack2" type="Position2D" parent="."]
position = Vector2( 48, 48 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AlphaTween" type="Tween" parent="."]

[node name="hitbox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 1

[node name="Panel" type="Panel" parent="hitbox"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="gui_input" from="hitbox" to="." method="_on_gui_input"]
